--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     <title>Brendan's React Portfolio</title>
   </head>
 
-  <body class ="d-flex flex-column">
+  <body class ="main-div d-flex flex-column">
 
 <!-- NavBar HTML -->
+
+<div class ="main-div d-flex flex-column">
 
 <nav id="apricot" class="navbar navbar-expand-lg " >
   <div class="container-fluid">
@@ -52,7 +54,7 @@
 <!-- About Me Info -->
 
 <div class="media py-5 ml-2">
-  <img src="/assets/brendan.png" class="mr-3 rounded" >
+  <img src="/REACT_Portfolio/assets/brendan.png" class="mr-3 rounded" >
   <div class="media-body">
     <h5 class="mt-0">	Hello! My name is Brendan. </h5>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti esse rem, suscipit sint alias sed eos omnis, ullam distinctio nihil, veritatis illo? Blanditiis ullam accusamus fuga quam error cumque officia?</p>
@@ -87,7 +89,7 @@
 
 </div> -->
 
-<!-- <div >
+<div >
 
 <div class = "ml-2 d-flex flex-column align-items-center " >
 	<h2 class="mb-3">Resume</h2>	
@@ -120,7 +122,7 @@
 </div> -->
 
 
-<!-- <div class="container d-flex flex-column align-items-center justify-content-between portfolio-page" >
+<div class="container d-flex flex-column align-items-center justify-content-between portfolio-page" >
   <div class="row">
 
       <div class="col">
@@ -132,8 +134,8 @@
       </div>
      <div class="col">
         <h3 class="m-2">
-        <a href= 'https://brendan838.github.io/groupProject_teamSoFetch/' class='link-dark'>Gifficult</a>
-        <a href= 'https://github.com/Brendan838/groupProject_teamSoFetch'> <i class="link-dark fab fa-github fa-1x"></i></a>
+        <a href=  class='link-dark'>Gifficult</a>
+        <a href= 'h'https://brendan838.github.io/groupProject_teamSoFetch/'ttps://github.com/Brendan838/groupProject_teamSoFetch'> <i class="link-dark fab fa-github fa-1x"></i></a>
         </h3>
         <img src="https://via.placeholder.com/450x300" class="port-img m-2">
       </div>
@@ -178,7 +180,7 @@
 
   
  
-</div> --> 
+</div> 
 
 
 
@@ -193,5 +195,7 @@
 
 </footer>
 
+
+</div>
   </body>
 </html>
